<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sphero_node</name>
  <version>0.0.0</version>
  <description>
    sphero_node provides a ROS2 wrapper for the sphero driver.
  </description>
  <maintainer email="allison@lyonthackston.com">Allison Thackston</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sphero_driver</exec_depend>
  <exec_depend>sphero_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
